# pyntb

./: LICENSE  README.md  create_uvenv  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
examples/: geoutils.py  optimize.py  polynomial.py  requirements.txt
src/pyntb/: geoutils.py  optimize.py  polynomial.py
test/: test_geoutils.py  test_optimize.py  test_polynomial.py
