[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyntb"
version = "2024.0.1"
authors = [
    {name = "Eurobios Mews Labs", email = "emmanuel.cieren@mews-labs.com"},
]
description = "A toolbox to factorize some code utilities across various projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
examples = ["matplotlib", "scikit-learn"]
test = ["pytest", "scikit-learn", "pylint"]

[project.urls]
"Homepage" = "https://github.com/eurobios-mews-labs/pyntb"
